--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,4 +5,4 @@ spring.h2.console.path=/h2-console
 spring.datasource.url=jdbc:h2:mem:usuario
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=NicolasPires
-spring.datasource.password=1234
+spring.datasource.password=
